--- a/src/pages/dashboard/dashboard.component.html
+++ b/src/pages/dashboard/dashboard.component.html
@@ -1,2 +1,7 @@
-<app-create-order-form></app-create-order-form>
 <app-order-table></app-order-table>
+<a
+  routerLink="/dashboard/create-order"
+  class="px-3 py-1 text-sm font-medium rounded-md text-black hover:bg-indigo-700 transition"
+>
+  Create Order
+</a>
