--- a/src/components/create-order-form/create-order-form.component.html
+++ b/src/components/create-order-form/create-order-form.component.html
@@ -1,8 +1,13 @@
-<form [formGroup]="createOrderForm" (ngSubmit)="onSubmit()" class="bg-red-300">
+<form 
+  [formGroup]="createOrderForm" 
+  (ngSubmit)="onSubmit()" 
+  class="bg-gray-100 flex flex-col gap-2 p-8 border-gray-200 border-solid border max-w-96 rounded-xl shadow-2xl mt-10 mx-auto"
+>
   <!-- Product field field -->
-  <div>
-    <label for="product">Product</label>
+  <div class="flex flex-col gap-1">
+    <label class="min-w-20 inline-block font-semibold text-gray-500 uppercase tracking-wider text-xs" for="product">Product</label>
     <input
+      class="rounded p-1 border border-solid border-gray-200"
       id="product"
       name="product"
       type="text"
@@ -10,7 +15,7 @@
       required
     />
 
-    <span class="mt-1 text-xs text-red-600">
+    <span class="text-xs text-red-600 h-4">
       @if (isInvalid('product')) {
         @if (productControl.hasError('required')) { 
           Product is required. 
@@ -20,9 +25,10 @@
   </div>
 
   <!-- Total amount field -->
-  <div>
-    <label for="total-amount">Total amount</label>
+  <div class="flex flex-col gap-1">
+    <label class="min-w-20 inline-block font-semibold text-gray-500 uppercase tracking-wider text-xs" for="total-amount">Total amount</label>
     <input
+      class="rounded p-1 border border-solid border-gray-200"
       id="total-amount"
       name="total-amount"
       type="number"
@@ -30,7 +36,7 @@
       required
     />
 
-    <span class="mt-1 text-xs text-red-600">
+    <span class="text-xs text-red-600 h-4">
       @if (isInvalid('totalAmount')) {
         @if (totalAmountControl.hasError('required')) { 
           Total amount is required. 
@@ -40,9 +46,10 @@
   </div>
 
   <!-- Status field -->
-  <div>
-    <label for="status">Status</label>
+  <div class="flex flex-col gap-1">
+    <label class="min-w-20 inline-block font-semibold text-gray-500 uppercase tracking-wider text-xs" for="status">Status</label>
     <select 
+      class="rounded p-1 border border-solid border-gray-200"
       id="status" 
       name="status" 
       formControlName="status"
@@ -54,7 +61,7 @@
       }
     </select>
 
-    <span class="mt-1 text-xs text-red-600">
+    <span class="text-xs text-red-600 h-4">
       @if (isInvalid('status')) {
         @if (statusControl.hasError('required')) { 
           Status is required. 
@@ -64,17 +71,21 @@
   </div>
 
   <!-- Submit button -->
-  <button type="button" (click)="onSubmit()" class="bg-blue-300">
+  <button 
+    type="button" 
+    (click)="onSubmit()" 
+    class="bg-white border-gray-200 border-solid border p-1 rounded hover:bg-gray-50 active:bg-gray-100 font-semibold"
+  >
     Create order
   </button>
 
   <!-- Submission Message -->
   @if (submissionMessage()) {
-  <div
-    class="mt-6 p-4 rounded-lg bg-green-50 border border-green-200 text-green-800 text-sm font-medium"
-  >
-    {{ submissionMessage() }}
-  </div>
+    <div
+      class="mt-6 p-4 rounded-lg bg-blue-50 border border-blue-200 text-blue-800 text-sm font-semibold"
+    >
+      {{ submissionMessage() }}
+    </div>
   }
 </form>
 
