--- a/src/components/login-form/login-form.component.html
+++ b/src/components/login-form/login-form.component.html
@@ -1,8 +1,13 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="bg-red-300">
+<form
+  [formGroup]="loginForm"
+  (ngSubmit)="onSubmit()"
+  class="bg-gray-100 flex flex-col gap-2 p-8 border-gray-200 border-solid border max-w-96 rounded-xl shadow-2xl mt-10 mx-auto"
+>
   <!-- Email field -->
-  <div>
-    <label for="email">Email</label>
+  <div class="flex flex-col gap-1">
+    <label class="min-w-20 inline-block font-semibold text-gray-500 uppercase tracking-wider text-xs" for="email">Email</label>
     <input
+      class="rounded p-1 border border-solid border-gray-200"
       id="email"
       name="email"
       type="email"
@@ -11,17 +16,23 @@
       required
     />
 
-    <span class="mt-1 text-xs text-red-600">
-      @if (isInvalid('email')) { @if (emailControl.hasError('required')) { Email
-      is required. } @else if (emailControl.hasError('email')) { Please enter a
-      valid email address. } }
+    <span class="text-xs text-red-600 h-4">
+      @if (isInvalid('email')) { 
+        @if (emailControl.hasError('required')) { 
+          Email is required. 
+        } 
+        @else if (emailControl.hasError('email')) { 
+          Please enter a valid email address. 
+        } 
+      }
     </span>
   </div>
 
   <!-- Password field -->
-  <div>
-    <label for="password">Password</label>
+  <div class="flex flex-col gap-1">
+    <label class="min-w-20 inline-block font-semibold text-gray-500 uppercase tracking-wider text-xs" for="password">Password</label>
     <input
+      class="rounded p-1 border border-solid border-gray-200"
       id="password"
       name="password"
       type="text"
@@ -29,20 +40,27 @@
       required
     />
 
-    <span class="mt-1 text-xs text-red-600">
-      @if (isInvalid('password')) { @if (passwordControl.hasError('required')) {
-      Password is required. } @else if (passwordControl.hasError('minlength')) {
-      Password must be at least 8 characters long. } }
+    <span class="text-xs text-red-600 h-4">
+      @if (isInvalid('password')) { 
+        @if (passwordControl.hasError('required')) {
+          Password is required. 
+        } 
+        @else if (passwordControl.hasError('minlength')) {
+          Password must be at least 8 characters long. 
+        } 
+      }
     </span>
   </div>
 
   <!-- Submit button -->
-  <button type="button" (click)="onSubmit()" class="bg-blue-300">Login</button>
+  <button type="button" (click)="onSubmit()" class="bg-white border-gray-200 border-solid border p-1 rounded hover:bg-gray-50 active:bg-gray-100 font-semibold">
+    Login
+  </button>
 
   <!-- Submission Message -->
   @if (submissionMessage()) {
   <div
-    class="mt-6 p-4 rounded-lg bg-green-50 border border-green-200 text-green-800 text-sm font-medium"
+    class="mt-6 p-4 rounded-lg bg-blue-50 border border-blue-200 text-blue-800 text-sm font-semibold"
   >
     {{ submissionMessage() }}
   </div>
