--- a/src/components/registration-form/registration-form.component.html
+++ b/src/components/registration-form/registration-form.component.html
@@ -1,8 +1,15 @@
-<form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" class="bg-red-300">
+<form
+  [formGroup]="registrationForm"
+  (ngSubmit)="onSubmit()"
+  class="bg-gray-100 flex flex-col gap-2 p-8 border-gray-200 border-solid border max-w-96 rounded-xl shadow-2xl mt-10 mx-auto"
+>
   <!-- First name field -->
-  <div>
-    <label for="first-name">First name</label>
+  <div class="flex flex-col gap-1">
+    <label class="min-w-20 inline-block font-semibold text-gray-500 uppercase tracking-wider text-xs" for="first-name"
+      >First name</label
+    >
     <input
+      class="rounded p-1 border border-solid border-gray-200"
       id="first-name"
       name="first-name"
       type="text"
@@ -10,8 +17,8 @@
       required
     />
 
-    <span class="mt-1 text-xs text-red-600">
-      @if (isInvalid('firstName')) {
+    <span class="text-xs text-red-600 h-4">
+      @if (isInvalid('firstName')) { 
         @if (firstNameControl.hasError('required')) { 
           First name is required. 
         } 
@@ -20,9 +27,12 @@
   </div>
 
   <!-- Last name field -->
-  <div>
-    <label for="last-name">Last name</label>
+  <div class="flex flex-col gap-1">
+    <label class="min-w-20 inline-block font-semibold text-gray-500 uppercase tracking-wider text-xs" for="last-name"
+      >Last name</label
+    >
     <input
+      class="rounded p-1 border border-solid border-gray-200"
       id="last-name"
       name="last-name"
       type="text"
@@ -30,9 +40,9 @@
       required
     />
 
-    <span class="mt-1 text-xs text-red-600">
-      @if (isInvalid('lastName')) {
-        @if (lastNameControl.hasError('required')) { 
+    <span class="text-xs text-red-600 h-4">
+      @if (isInvalid('lastName')) { 
+        @if (lastNameControl.hasError('required')) {
           Last name is required. 
         } 
       }
@@ -40,9 +50,10 @@
   </div>
 
   <!-- Email field -->
-  <div>
-    <label for="email">Email</label>
+  <div class="flex flex-col gap-1">
+    <label class="min-w-20 inline-block font-semibold text-gray-500 uppercase tracking-wider text-xs" for="email">Email</label>
     <input
+      class="rounded p-1 border border-solid border-gray-200"
       id="email"
       name="email"
       type="email"
@@ -51,22 +62,25 @@
       required
     />
 
-    <span class="mt-1 text-xs text-red-600">
-      @if (isInvalid('email')) {
+    <span class="text-xs text-red-600 h-4">
+      @if (isInvalid('email')) { 
         @if (emailControl.hasError('required')) { 
           Email is required. 
         } 
         @else if (emailControl.hasError('email')) { 
           Please enter a valid email address. 
-        }
+        } 
       }
     </span>
   </div>
 
   <!-- Password field -->
-  <div>
-    <label for="password">Password</label>
+  <div class="flex flex-col gap-1">
+    <label class="min-w-20 inline-block font-semibold text-gray-500 uppercase tracking-wider text-xs" for="password"
+      >Password</label
+    >
     <input
+      class="rounded p-1 border border-solid border-gray-200"
       id="password"
       name="password"
       type="text"
@@ -74,22 +88,24 @@
       required
     />
 
-    <span class="mt-1 text-xs text-red-600">
-      @if (isInvalid('password')) {
-        @if (passwordControl.hasError('required')) { 
+    <span class="text-xs text-red-600 h-4">
+      @if (isInvalid('password')) { 
+        @if (passwordControl.hasError('required')) {
           Password is required. 
-        } 
-        @else if (passwordControl.hasError('minlength')) { 
+        } @else if (passwordControl.hasError('minlength')) {
           Password must be at least 8 characters long. 
-        }
+        } 
       }
     </span>
   </div>
 
   <!-- Confirm password -->
-  <div>
-    <label for="confirm-password">Confirm password</label>
+  <div class="flex flex-col gap-1">
+    <label class="min-w-20 inline-block font-semibold text-gray-500 uppercase tracking-wider text-xs" for="confirm-password"
+      >Confirm password</label
+    >
     <input
+      class="rounded p-1 border border-solid border-gray-200"
       id="confirm-password"
       name="confirm-password"
       type="text"
@@ -97,28 +113,32 @@
       required
     />
 
-    <span class="mt-1 text-xs text-red-600">
-      @if (isInvalid('confirmPassword')) {
-        @if (registrationForm.hasError('mismatch')) {
-          Passwords must match.
+    <span class="text-xs text-red-600 h-4">
+      @if (isInvalid('confirmPassword')) { 
+        @if (registrationForm.hasError('mismatch')) { 
+          Passwords must match. 
         } @else if (confirmPasswordControl.hasError('required')) {
-          Confirm password is required.
-        }
+          Confirm password is required. 
+        } 
       }
     </span>
   </div>
 
   <!-- Submit button -->
-  <button type="button" (click)="onSubmit()" class="bg-blue-300">
+  <button
+    type="button"
+    (click)="onSubmit()"
+    class="bg-white border-gray-200 border-solid border p-1 rounded hover:bg-gray-50 active:bg-gray-100 font-semibold"
+  >
     Register
   </button>
 
   <!-- Submission Message -->
   @if (submissionMessage()) {
-  <div
-    class="mt-6 p-4 rounded-lg bg-green-50 border border-green-200 text-green-800 text-sm font-medium"
-  >
-    {{ submissionMessage() }}
-  </div>
+    <div
+      class="mt-6 p-4 rounded-lg bg-blue-50 border border-blue-200 text-blue-800 text-sm font-semibold"
+    >
+      {{ submissionMessage() }}
+    </div>
   }
 </form>
