--- a/src/pages/dashboard/dashboard.component.html
+++ b/src/pages/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <app-order-table></app-order-table>
 <a
   routerLink="/dashboard/create-order"
-  class="px-3 py-1 text-sm font-medium rounded-md text-black hover:bg-indigo-700 transition"
+  class="bg-white flex w-fit mx-auto px-4 p-1 border-gray-200 border-solid border rounded hover:bg-gray-50 active:bg-gray-100 font-semibold"
 >
   Create Order
 </a>
